# cuda-solvers

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
include/cuda_solvers/: aaj.h  gmres.h  types.h
include/cuda_solvers/detail/: aaj_impl.cuh  gmres_impl.cuh  least_squares.cuh  logger.h  utils.h  vector_operations.cuh
tests/: CMakeLists.txt  aaj.cu  gmres.cu  least_squares.cu  vector_operations.cu
